--- a/styles/includes/fonts.css
+++ b/styles/includes/fonts.css
@@ -2,35 +2,35 @@
 /* Fonts */
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/KFOmCnqEu92Fr1Mu4mxK.ttf') format('truetype');
+    src: url('../../fonts/KFOmCnqEu92Fr1Mu4mxK.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/KFOlCnqEu92Fr1MmEU9fBBc9.ttf') format('truetype');
+    src: url('../../fonts/KFOlCnqEu92Fr1MmEU9fBBc9.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/KFOlCnqEu92Fr1MmWUlfBBc9.ttf') format('truetype');
+    src: url('../../fonts/KFOlCnqEu92Fr1MmWUlfBBc9.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/KFOlCnqEu92Fr1MmSU5fBBc9.ttf') format('truetype');
+    src: url('../../fonts/KFOlCnqEu92Fr1MmSU5fBBc9.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/KFOlCnqEu92Fr1MmWUlfBBc9.ttf') format('truetype');
+    src: url('../../fonts/KFOlCnqEu92Fr1MmWUlfBBc9.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
 }
