--- a/styles/includes/promo.css
+++ b/styles/includes/promo.css
@@ -95,7 +95,7 @@
 }
 
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .promo {
         padding-top: 86.5px;
         margin-bottom: 64.5px;
@@ -124,7 +124,7 @@
     }
 }
 
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
     .promo {
         padding-top: 48px;
         margin-bottom: 32px;
@@ -143,7 +143,7 @@
     }
 }
 
-@media (max-width: 320px) {
+@media screen and (max-width: 320px) {
     .promo {
         padding-top: 40px;
         margin-bottom: 24px;
