--- a/styles/includes/features.css
+++ b/styles/includes/features.css
@@ -14,6 +14,7 @@
     height: 500px;
     background-color: var(--color-bg-secondary);
     position: relative;
+    overflow: hidden;
 }
 
 .features__content {
@@ -46,5 +47,63 @@
     
     img {
     width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .features {
+        margin-bottom: 64px;
+        gap: 16px;
+    }
+    .features__item {
+        padding: 32px;
+        height: 570px;
+    }
+    .features__title {
+        font-size: 24px;
+    }
+    .features__list {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .features {
+        grid-template-columns: 1fr;
+        gap: 16px;
+        margin-bottom: 48px;
+    }
+    .features__item {
+        height: 265px;
+    }
+    .features__image {
+        width: 220px;
+        height: 220px;
+    }
+    #item-second {
+        bottom: -25px;
+        right: -25px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .features {
+        gap: 12px;
+    }
+    .features__item {
+        padding: 24px;
+        border-radius: 16px;
+        height: 150px;
+    }
+    .features__title {
+        font-size: 16px;
+    }
+    .features__image {
+        height: 120px;
+        width: 120px;
+    }
+    #item-second {
+        bottom: -15px;
+        right: -15px;
     }
 }
