--- a/styles/includes/product.css
+++ b/styles/includes/product.css
@@ -206,7 +206,7 @@
         display: none;
     }
 
-    .container {
-        padding: 0!important;
+    #product-container {
+        padding: 0;
     }
 }
