--- a/styles/includes/footer.css
+++ b/styles/includes/footer.css
@@ -3,15 +3,6 @@
     padding: 64px 0;
 }
 
-.footer__container {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-}
-
 .footer__content {
     grid-column: span 4;
     display: flex;
@@ -41,15 +32,20 @@
     margin: 0;
 }
 
+.footer__description {
+    width: 24%;
+}
+@media screen and (max-width: 768px) {
+    .footer__description {
+        width: 30%;
+    }
+}
 @media screen and (max-width: 480px) {
     .footer {
         padding: 48px 0;
     }
-    .footer__container {
-        display: block;
-    }
-    .footer__description br {
-        display: none;
+    .footer__description {
+        width: 100%;
     }
 }
 
