--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,29 +24,43 @@ body {
 }
 
 /* Container */
+/* Контейнер с фиксированной шириной */
 .container {
-    margin: 0 auto;
-    max-width: 1168px;
-    padding: 0 var(--container-x-gap);
     width: 100%;
-}
-
-.flex {
-    display: flex;
-}
-
-.flex-col {
-    flex-direction: column;
-}
-
-.gap-10 {
-    gap: 2.5rem;
-}
-
-.py-10 {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-}
+    margin: 0 auto;
+  }
+  
+  /* Стили для разных размеров экранов */
+  @media (min-width: 576px) {
+    .container {
+      max-width: 540px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .container {
+      max-width: 720px;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    .container {
+      max-width: 960px;
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1140px;
+    }
+  }
+  
+  @media (min-width: 1400px) {
+    .container {
+      max-width: 1320px;
+    }
+  }
+  
 
 @media (min-width: 480px) {
     .sm\:gap-12 {
